Notebook updated with new parameters for the simulation

--- a/eventoriented/eventoriented_sim.ipynb
+++ b/eventoriented/eventoriented_sim.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,25 +36,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exponential generator \n",
-    "# Mean arrival rate = 1.0\n",
-    "# Mean service rate = 0.7\n",
+    "# Mean arrival rate = 3.0 mins\n",
+    "# Mean service rate = 1 min\n",
     "class ExponentialFactory(GeneratorFactory):\n",
     "    \n",
     "    def createArrivals(self):\n",
-    "        return ExponentialGenerator(1.0, self.number_of_samples, self.seed)\n",
+    "        return ExponentialGenerator(3, self.number_of_samples, self.seed)\n",
     "    \n",
     "    def createServices(self):\n",
-    "        return ExponentialGenerator(0.7, self.number_of_samples, self.seed)\n",
+    "        return ExponentialGenerator(1, self.number_of_samples, self.seed)\n",
     "    \n",
     "\n",
     "# Uniform generator \n",
-    "# Time between arrivals from 0 to 20  \n",
-    "# Service time from 2 to 5\n",
+    "# Time between arrivals from 0 to 20 mins \n",
+    "# Service time from 2 to 5 mins\n",
     "class UniformFactory(GeneratorFactory):\n",
     "    \n",
     "    def createArrivals(self):\n",
@@ -69,12 +69,13 @@
    "metadata": {},
    "source": [
     "### Simulation is initialized with 1000 samples and seed is 1959\n",
-    "If seed is not define, every simulation is going to initilized randomly"
+    "If seed is not define, every simulation is going to initilized randomly.\n",
+    "Uniform factory is used to simulate system."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
